--- a/index.html
+++ b/index.html
@@ -2,4 +2,8 @@
 layout: default
 ---
 
-{% include modules/feature-grid.html %}
+{% include modules/welcome-strip.html %}
+
+<div class="wrapper-main">
+	{% include modules/feature-grid.html %}
+</div>
