--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 layout: default
 ---
 
-{% include modules/welcome-strip.html %}
+{% include modules/home/welcome-strip.html %}
 
 <div class="wrapper-main">
-	{% include modules/feature-grid.html %}
+	{% include modules/home/feature-grid.html %}
 </div>
