--- a/index.html
+++ b/index.html
@@ -4,3 +4,10 @@ layout: default
 
 {% include modules/home/hero-banner.html %}
 
+{% include header.html %}
+
+{% include modules/home/welcome-panel.html %}
+
+{% include modules/home/shop-category-panel.html %}
+
+{% include modules/home/offer-panel.html %}
